@@ -135,23 +135,6 @@ class JackNotifyChannelInterface
         virtual void ClientNotify(int refnum, const char* name, int notify, int sync, int value, int* result)
         {}
 
-		/*
-        enum NotificationType {
-            kAddClient = 0,
-            kRemoveClient = 1,
-			kActivateClient = 2,
-            kXRunCallback = 3,
-            kGraphOrderCallback = 4,
-            kBufferSizeCallback = 5,
-            kStartFreewheel = 6,
-            kStopFreewheel = 7,
-            kPortRegistrationOn = 8,
-            kPortRegistrationOff = 9,
-            kZombifyClient = 10,
-            kDeadClient = 11,
-			kMaxType
-		};
-		*/
 };
 
 /*!
