@@ -29,10 +29,10 @@ namespace Jack
 		kXRunCallback = 3,
 		kGraphOrderCallback = 4,
 		kBufferSizeCallback = 5,
-		kStartFreewheel = 6,
-		kStopFreewheel = 7,
-		kPortRegistrationOn = 8,
-		kPortRegistrationOff = 9,
+		kStartFreewheelCallback = 6,
+		kStopFreewheelCallback = 7,
+		kPortRegistrationOnCallback = 8,
+		kPortRegistrationOffCallback = 9,
 		kZombifyClient = 10,
 		kDeadClient = 11,
 		kMaxNotification
